modificando mais a API EODHDClient